--- a/laws-and-fines/resolve-a-violation.html
+++ b/laws-and-fines/resolve-a-violation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Corrects IE Compatibility Mode -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Article Three Column • NYC Core Framework</title>
+    <title>Resolve a Violation | NYC Office of Special Enforcement</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../fontawesome/css/all.min.css" />
     <!-- NYC Theme CSS -->
@@ -163,17 +163,27 @@
                       </div>
                     </div>
                     <!-- .nav-item -->
-                    <div class="nav-item ">
+                    <div class="nav-item">
                       <a
-                        class="nav-link"
-                        href="../illegal-short-term-rentals/"
+                        class="nav-link dropdown-toggle"
+                        href="#"
                         id="nav-item-02"
+                        data-toggle="dropdown"
                         aria-haspopup="false"
                         aria-expanded="false"
                         title="Nav Item"
                       >
                         Illegal Short-Term Rentals
                       </a>
+
+                      <div class="dropdown-menu" aria-labelledby="nav-item-01">
+                        <ul class="extensible-list">
+                          <li>
+                            <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
+                          </li>
+                          <li><a href="../illegal-short-term-rentals/quiz.html">Take the Quiz</a></li>
+                        </ul>
+                      </div>
                     </div>
                     <!-- .nav-item -->
                     <div class="nav-item dropdown">
@@ -192,11 +202,8 @@
                         <ul class="extensible-list">
                           <li>
                             <a href="../laws-and-fines/illegal-short-term-rentals.html"
-                              >Illegal Short-Term Rentals Laws & Fines</a
+                              >For Illegal Short-Term Rentals</a
                             >
-                          </li>
-                          <li>
-                            <a href="../laws-and-fines/general-laws-and-fines.html">General Laws & Fines</a>
                           </li>
                           <li>
                             <a href="../laws-and-fines/resolve-a-violation.html"
@@ -345,22 +352,15 @@
                 </h2>
                 <div class="list-group list-group-flush border-bottom" role="list">
                   <a
-                    href="./illegal-short-term-rentals.html.html"
+                    href="./illegal-short-term-rentals.html"
                     class="list-group-item list-group-item-action"
                     aria-current="page"
                     role="listitem"
                   >
-                    Illegal Short-Term Rentals
+                    For Illegal Short-Term Rentals
                   </a>
                   <a
-                    href="./general-laws-and-fines.html.html"
-                    class="list-group-item list-group-item-action"
-                    role="listitem"
-                  >
-                    General Laws & Fines
-                  </a>
-                  <a
-                    href="./resolve-a-violation.html.html"
+                    href="./resolve-a-violation.html"
                     class="list-group-item list-group-item-action active"
                     role="listitem"
                   >
