--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -350,7 +350,7 @@
 
     <main role="main">
       <!-- Add your custom image class below (replace 'oculus' with your own custom class) -->
-      <div class="bg-primary banner-with-background oculus d-flex flex-column">
+      <div class="bg-primary banner-with-background hero-2 d-flex flex-column">
         <div class="container-fluid my-auto">
           <div class="narrow my-3">
             <h1 class="display-4 text-white">Illegal Short-Term Rentals</h1>
