--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
           <div class="card-img-overlay d-flex">
             <div class="container align-self-center my-3">
-              <div class="narrow text-white text-center">
+              <div class="medium text-white text-center">
                 <h1 class="card-title display-4 font-weight-bold mb-3">
                   Lorem ipsum dolor sit amet consectetur.
                 </h1>
