--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -352,7 +352,7 @@
       <!-- Add your custom image class below (replace 'oculus' with your own custom class) -->
       <div class="bg-primary banner-with-background hero-2 d-flex flex-column">
         <div class="container-fluid my-auto">
-          <div class="narrow my-3">
+          <div class="wide my-3">
             <h1 class="display-4 text-white">Illegal Short-Term Rentals</h1>
           </div>
         </div>
@@ -394,11 +394,7 @@
                   >
                     About Illegal Short-Term Rentals
                   </a>
-                  <a
-                    href="./quiz.html"
-                    class="list-group-item list-group-item-action"
-                    role="listitem"
-                  >
+                  <a href="./quiz.html" class="list-group-item list-group-item-action" role="listitem">
                     Take the Quiz
                   </a>
                 </div>
@@ -430,6 +426,12 @@
                 </h5>
                 <h5><a href="./quiz">Take the quiz to find out.</a></h5>
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
+                  <h3>Hosts:</h3>
+                  <p>
+                    If you use your home as an illegal short-term rental, you may be breaking the laws that
+                    protect New Yorkers and visitors to NYC. Are you violating short-term rental
+                    restrictions and in jeopardy of receiving a fine or legal action from your landlord?
+                  </p>
                   <div class="card">
                     <a
                       class="card-header h4 collapse collapsed"
@@ -493,6 +495,15 @@
                     <!-- .collapse -->
                   </div>
                   <!-- .card -->
+                  <h3>Travelers:</h3>
+                  <p>
+                    Have you booked a short-term rental in NYC? You deserve a safe and legal place to stay
+                    while they are in New York City. Illegal short-term rentals can target tourists with
+                    bait-and-switch tactics. Visitors may arrive to find your host is unavailable or
+                    unreachable. You may find there is no longer a place to stay, that you are staying
+                    somewhere other than where you reserved your stay, or that the amenities advertised
+                    online are not available. Your rental may be unsafe, unsanitary, or occupied by others.
+                  </p>
                   <div class="card">
                     <a
                       class="card-header h4 collapse collapsed"
@@ -513,13 +524,6 @@
                       data-parent="#accordion-01"
                     >
                       <div class="card-body">
-                        <p>
-                          Illegal short-term rentals can target tourists with bait-and-switch tactics.
-                          Visitors may arrive to find your host is unavailable or unreachable. You may find
-                          there is no longer a place to stay, that you are staying somewhere other than
-                          where you reserved your stay, or that the amenities advertised online are not
-                          available. Your rental may be unsafe, unsanitary, or occupied by others.
-                        </p>
                         <ul>
                           <li>
                             Call 311, or submit a complaint online, so that your complaint can be
@@ -543,6 +547,17 @@
                     <!-- .collapse -->
                   </div>
                   <!-- .card -->
+                  <h3>Neighbors:</h3>
+                  <p>
+                    Are illegal short-term rentals making you feel unsafe, taking away housing, or causing
+                    disturbances? Are you concerned that apartments in your building or the homes on your
+                    block are being used as illegal short-term rentals, or that these rentals are disrupting
+                    the safety and peace of your building or neighborhood? Signs of illegal short-term
+                    rentals vary according to the unique characteristics of each neighborhood and building.
+                    Other than the presence of online advertisements, the surest indication of illegal
+                    short-term rentals is often based on your common sense, and your observations of
+                    telltale signs
+                  </p>
                   <div class="card">
                     <a
                       class="card-header h4 collapse collapsed"
@@ -599,6 +614,12 @@
                   </div>
                   <!-- .card -->
                 </div>
+                <h3>Learn About the Laws and Fines</h3>
+                <p>
+                  For more information, read the following restrictions, outlined in the
+                  <a href="#">NYS Multiple Dwelling Law</a>, the <a href="#">NYC Administrative Code</a>,
+                  and the <a href="#">New York City Zoning Resolution</a>.
+                </p>
               </div>
               <!-- .narrow -->
 
