--- a/laws-and-fines/illegal-short-term-rentals.html
+++ b/laws-and-fines/illegal-short-term-rentals.html
@@ -317,9 +317,9 @@
     <!-- #global-header -->
     <main role="main">
       <!-- Add your custom image class below (replace 'oculus' with your own custom class) -->
-      <div class="bg-primary banner-with-background hero-1 d-flex flex-column">
+      <div class="bg-primary banner-with-background hero-3 d-flex flex-column">
         <div class="container-fluid my-auto">
-          <div class="narrow my-3">
+          <div class="wide my-3">
             <h1 class="display-4 text-white">Laws & Fines</h1>
           </div>
         </div>
