--- a/news-and-reports/news.html
+++ b/news-and-reports/news.html
@@ -350,7 +350,7 @@
       <!-- Add your custom image class below (replace 'oculus' with your own custom class) -->
       <div class="bg-primary banner-with-background hero-2 d-flex flex-column">
         <div class="container-fluid my-auto">
-          <div class="narrow my-3">
+          <div class="wide my-3">
             <h1 class="display-4 text-white">News & Reports</h1>
           </div>
         </div>
